# rrpc

./: Cargo.toml  LICENSE  README.md
api/: Cargo.toml
api/src/: lib.rs
base/: Cargo.toml
base/src/: lib.rs  utils.rs
base/src/server/: both_streaming.rs  client_streaming.rs  tonic_service.rs
client/: Cargo.toml
example/api/: Cargo.toml
example/api/src/: lib.rs
example/client/: Cargo.toml
example/client/src/: main.rs
example/server/: Cargo.toml
example/server/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  lib.rs
src/codec/: json.rs
src/server/: mod.rs  non_streaming.rs  server_streaming.rs
