[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rrpc = { path = "../.." }
api = { path = "../api" }

tonic = { version = "~0.14", features = ["transport", "server"] }
anyhow = { version = "~1" }
tokio = { version = "~1", features = ["full"] }
futures-util = { version = "~0.3" }
